# ChangeLog for media-video/vdr
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.18 2003/06/04 10:20:52 mad Exp $

*vdr-1.2.0 (04 Jun 2003)
  12 May 2003; M.Hierling <mad@cc.fh-lippe.de>
  jumped to version 1.2.0, vdr now runs with uid vdr and gid video,
  pluginnames changed, some default dirs changed, added default
  plugins, moved plugindir to /usr/lib/vdr 
  added VDR_OPTS (vfat, rcu, akool) to steer the installation of
  patches and vdr addons

*vdr-1.1.31 (12 May 2003)
  12 May 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.31.ebuild
  new version, version needs cvs head driver from 2002-05-10
  and is therefore marked unstable, nothing new

  15 May 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.31.ebuild
  fixed compile problem (menu.c), see vdr ml

*vdr-1.1.30 (06 May 2003)
  06 May 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.30.ebuild
  new version, version needs cvs head driver from 2002-04-27
  and is therefore marked unstable, nothing new

*vdr-1.1.29 (27 Apr 2003)
  27 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.29.ebuild
  new version, version needs cvs head driver from 2002-04-27
  and is therefore marked unstable, nothing new

*vdr-1.1.28 (21 Apr 2003)
  22 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.28.ebuild
  new version, version needs cvs head driver from 2002-04-21
  and is therefore marked unstable, nothing new

*vdr-1.1.27 (11 Apr 2003)
  14 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.27.ebuild
  new version, this version runs only with cvs head dvb driver
  (may change) and is therefore marked unstable

*vdr-1.1.26-r1 (11 Apr 2003)
  11 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.26-r1.ebuild
  changed to vdr-vanilla, added PROVIDE Flag, removed elchi, 

  03 Apr 2003; H.Ryll <henning.ryll@web.de> rc.vdr-1.1.26
*vdr-1.1.26 (19 Mar 2003)